tests/RV64M/invalid/src/000-invalid1.s
# Invalid instruction placeholder 1
.text

.global _start

_start:
